test_suite/tests/ui/remote/bad_remote.stderr
error: failed to parse path: "~~~"
  --> tests/ui/remote/bad_remote.rs:10:18
   |
9  | #[derive(Serialize)]
   |          --------- in this derive macro expansion
10 | #[serde(remote = "~~~")]
   |                  ^^^^^
   |
   = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
